@@ -35,6 +35,7 @@
 
 === Bug fixes ===
  * #729 (KDTree & save)
+ * #871 (GeneralizedExponential P parameter : int or float ?)
 
 == 1.8 release (2016-11-18) == #release-1.8
 
